--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@ body {
   display: grid;
   gap: 2rem;
 }
-
 @media screen and (min-width: 768px) {
   .booklist {
     grid-template-columns: repeat(3, 1fr);
@@ -30,7 +29,10 @@ body {
   border-radius: 1rem;
   padding: 1rem 2rem;
 }
-
 .book h1 {
   margin-top: 0.5rem;
+}
+.book h4 {
+  color: red;
+  letter-spacing: 5px;
 }
