--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ body {
   margin-top: 0.5rem;
 }
 .book h4 {
-  color: red;
-  letter-spacing: 5px;
+  color: #617d98;
+  font-size: 0.75rem;
+  margin-top: 0.25rem;
 }
