--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
 @media screen and (min-width: 768px) {
   .booklist {
     grid-template-columns: repeat(3, 1fr);
+    /* align-items: start; */
   }
 }
 
@@ -36,4 +37,7 @@ body {
   color: #617d98;
   font-size: 0.75rem;
   margin-top: 0.25rem;
+}
+.book p {
+  margin-top: 0.5rem;
 }
